k8s/radarr/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    name: radarr
